# hsilibs

./: .gitignore  CMakeLists.txt  README.md
cmake/: hsilibsConfig.cmake.in
data/: hsiSession.data.xml  hsilibs.data.xml
include/hsilibs/: HSIEventSender.hpp  Issues.hpp  Types.hpp
plugins/: FakeHSIEventGenerator.cpp  FakeHSIEventGenerator.hpp  HSIController.cpp  HSIController.hpp  HSIDataLinkHandler.cpp  HSIDataLinkHandler.hpp  HSIReadout.cpp  HSIReadout.hpp
schema/hsilibs/: fakehsieventgenerator.jsonnet  fakehsieventgeneratorinfo.jsonnet  hsicontroller.jsonnet  hsicontrollerinfo.jsonnet  hsilibs.schema.xml  hsireadout.jsonnet  hsireadoutinfo.jsonnet
src/: HSIEventSender.cpp  HSIFrameProcessor.cpp  HSIFrameProcessor.hpp  TimingHSIFrameProcessor.cpp  TimingHSIFrameProcessor.hpp
